<resources>
    <string name="app_name">NewsApp</string>

    <string name="latest_news">Latest News</string>
    <string name="category">Category</string>
    <string name="favourite">Favourite</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="notification_title">Latest News</string>
    <string name="notification_body">Loading Latest News </string>
    <string name="main_notification_channel_name">Primary</string>

    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="FCM_PREF" formatted="true">%s</string>
    <string name="default_notification_channel_id">channel_id</string>

</resources>